--- a/index.html
+++ b/index.html
@@ -364,22 +364,9 @@
             <pre><code>
 use &lt;iostream&gt;
 
-global rock {
-    func main() -> int {
-        Start
-        HOI name = "Anonymous";
-        output "Enter your name: ";
-        input name;
-        
-        ? (name == "") {
-            output "Hello, stranger!\n";
-        } ! {
-            output "Rock on, " << name << "!\n";
-        }
-        return 0;
-        End
-    }
-}
+Start
+output "Punky hoi"
+End
             </code></pre>
         </div>
     </section>
